--- a/css/wedding.css
+++ b/css/wedding.css
@@ -1,15 +1,21 @@
-/*!
- * Start Bootstrap - Grayscale v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
+@font-face {
+    font-family: "Monika";
+    src: url(Monika.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "MonikaItalic";
+    src: url(Monika_Italic.ttf) format("truetype");
+}
+
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'MonikaItalic','Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size:20px;
   position: relative;
   width: 100%;
   height: 100%;
-  color: white;
-  background-color: black; }
+  color: whitesmoke;
+  background-color: #00838F; }
 
 html {
   width: 100%;
@@ -21,19 +27,19 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   margin: 0 0 35px;
   letter-spacing: 1px;
   text-transform: uppercase; }
 
 p {
-  font-size: 16px;
+  font-size: 30px;
   line-height: 1.5;
   margin: 0 0 25px; }
   @media (min-width: 768px) {
     p {
-      font-size: 18px;
+      font-size: 30px;
       line-height: 1.6;
       margin: 0 0 35px; } }
 
@@ -41,32 +47,32 @@ a {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  color: #42DCA3; }
+  color: #00838F;; }
   a:focus, a:hover {
     text-decoration: none;
     color: #1d9b6c; }
 
 #mainNav {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin-bottom: 0;
   text-transform: uppercase;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black; }
+  border-bottom: 1px solid rgba(79,195,247, 0.4);
+  background-color: #00838F;; }
   #mainNav .navbar-toggler {
-    font-size: 14px;
+    font-size: 30px;
     padding: 11px;
-    color: white;
-    border: 1px solid white; }
+    color: whitesmoke;
+    border: 1px solid whitesmoke; }
   #mainNav .navbar-brand {
     font-weight: 700; }
   #mainNav a {
-    color: white; }
+    color: whitesmoke; }
   #mainNav .navbar-nav .nav-item {
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
     transition: background 0.3s ease-in-out; }
     #mainNav .navbar-nav .nav-item:hover {
-      color: fade(white, 80%);
+      color: fade(whitesmoke, 80%);
       outline: none;
       background-color: transparent; }
     #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
@@ -85,13 +91,15 @@ a {
       #mainNav.navbar-shrink {
         padding-top: 10px;
         padding-bottom: 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        background: black; }
+        border-bottom: 1px solid rgba(79,195,247, 0.4);
+        background: #00838F;; }
       #mainNav .nav-link.active {
         outline: none;
-        background-color: rgba(255, 255, 255, 0.3); }
+        background-color: rgba(79,195,247, 0.4); }
         #mainNav .nav-link.active:hover {
-          color: white; } }
+          color: whitesmoke; } }
+
+
 
 .masthead {
   display: table;
@@ -99,9 +107,9 @@ a {
   height: auto;
   padding: 200px 0;
   text-align: center;
-  color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
-  background-color: black;
+  color: whitesmoke;
+  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2) ), url("../img/intro-bg.jpg") no-repeat bottom center scroll;
+  background-color: #00838F;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -112,15 +120,15 @@ a {
     .masthead .intro-body .brand-heading {
       font-size: 50px; }
     .masthead .intro-body .intro-text {
-      font-size: 18px; }
+      font-size: 30px; }
   @media (min-width: 768px) {
     .masthead {
       height: 100%;
       padding: 0; }
       .masthead .intro-body .brand-heading {
-        font-size: 100px; }
+        font-size: 80px; }
       .masthead .intro-body .intro-text {
-        font-size: 22px; } }
+        font-size: 30px; } }
 
 .btn-circle {
   font-size: 26px;
@@ -131,23 +139,23 @@ a {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
-  color: white;
-  border: 2px solid white;
+  color: whitesmoke;
+  border: 2px solid whitesmoke;
   border-radius: 100% !important;
   background: transparent; }
   .btn-circle:focus, .btn-circle:hover {
-    color: white;
+    color: whitesmoke;
     outline: none;
-    background: rgba(255, 255, 255, 0.1); }
+    background: rgba(79,195,247, 0.1); }
 
 .content-section {
   padding-top: 150px;
   padding-bottom: 150px; }
 
 .download-section {
-  color: white;
+  color: whitesmoke;
   background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
-  background-color: black;
+  background-color: #00838F;;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -165,7 +173,7 @@ a {
     height: 350px; } }
 
 .btn {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -174,14 +182,14 @@ a {
   border-radius: 0; }
 
 .btn-default {
-  color: #42DCA3;
-  border: 1px solid #42DCA3;
+  color: #00838F;;
+  border: 1px solid #00838F;;
   background-color: transparent; }
   .btn-default:focus, .btn-default:hover {
-    color: black;
-    border: 1px solid #42DCA3;
+    color: #00838F;;
+    border: 1px solid #00838F;;
     outline: none;
-    background-color: #42DCA3; }
+    background-color: #00838F;; }
 
 ul.banner-social-buttons {
   margin-top: 0; }
@@ -191,7 +199,7 @@ ul.banner-social-buttons {
   @media (max-width: 767px) {
     ul.banner-social-buttons li {
       display: block;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       padding: 0; }
       ul.banner-social-buttons li:last-child {
         margin-bottom: 0; } }
@@ -204,12 +212,12 @@ footer {
 
 ::-moz-selection {
   background: #fcfcfc;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255,171, 0.2);
   text-shadow: none; }
 
 ::selection {
   background: #fcfcfc;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255,171, 0.2);
   text-shadow: none; }
 
 img::selection {
@@ -219,4 +227,4 @@ img::-moz-selection {
   background: transparent; }
 
 body {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+  -webkit-tap-highlight-color: rgba(255,171, 0.2); }
