--- a/web/css/wedding.css
+++ b/web/css/wedding.css
@@ -72,7 +72,7 @@ a {
     font-size: 30px;
     padding: 11px;
     color: whitesmoke;
-    border: 1px solid whitesmoke; }
+    border: none }
   #mainNav .navbar-brand {
     font-weight: 700; }
   #mainNav a {
