--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -9,17 +9,21 @@
 }
 
 body {
-  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size:20px;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  color: whitesmoke;
-  background-color: #00838F; }
+    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    color: whitesmoke;
+    background-color: #00838F;
+}
 
-html {
-  width: 100%;
-  height: 100%; }
+html,
+#main-view,
+#home-scroll-context {
+    width: 100%;
+    height: 100%;
+}
 
 h1,
 h2,
@@ -27,240 +31,319 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  margin: 0 0 35px;
-  letter-spacing: 1px;
-  text-transform: uppercase; }
-
-h5,
-h6{
-  font-weight: 100;
-  margin: 0 0 15px;
+    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    margin: 0 0 35px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
-.intro-text, .italic{
+h5,
+h6 {
+    font-weight: 100;
+    margin: 0 0 15px;
+}
+
+.intro-text,
+.italic {
     font-family: 'MonikaItalic', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 p {
-  font-size: 30px;
-  line-height: 1.5;
-  margin: 0 0 25px; }
-  @media (min-width: 768px) {
+    font-size: 30px;
+    line-height: 1.5;
+    margin: 0 0 25px;
+}
+
+@media (min-width: 768px) {
     p {
-      font-size: 30px;
-      line-height: 1.5;
-      margin: 0 0 35px; } }
+        font-size: 30px;
+        line-height: 1.5;
+        margin: 0 0 35px;
+    }
+}
 
 a {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  color: whitesmoke; }
-  a:focus, a:hover {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    color: whitesmoke;
+}
+
+a:focus,
+a:hover {
     text-decoration: none;
-    color: rgba(79,195,247, 0.4); }
+    color: rgba(79, 195, 247, 0.4);
+}
 
 #mainNav {
-  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  margin-bottom: 0;
-  text-transform: uppercase;
-  border-bottom: 1px solid rgba(79,195,247, 0.4);
-  background-color: #00838F;; }
-  #mainNav .navbar-toggler {
+    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    border-bottom: 1px solid rgba(79, 195, 247, 0.4);
+    background-color: #00838F;
+    ;
+}
+
+#mainNav .navbar-toggler {
     font-size: 30px;
     padding: 11px;
     color: whitesmoke;
-    border: none }
-  #mainNav .navbar-brand {
-    font-weight: 700; }
-  #mainNav a {
-    color: whitesmoke; }
-  #mainNav .navbar-nav .nav-item {
+    border: none
+}
+
+#mainNav .navbar-brand {
+    font-weight: 700;
+}
+
+#mainNav a {
+    color: whitesmoke;
+}
+
+#mainNav .navbar-nav .nav-item {
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
-    transition: background 0.3s ease-in-out; }
-    #mainNav .navbar-nav .nav-item:hover {
-      color: fade(whitesmoke, 80%);
-      outline: none;
-      background-color: transparent; }
-    #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
-      outline: none;
-      background-color: transparent; }
-  @media (min-width: 992px) {
-    #mainNav {
-      padding-top: 20px;
-      padding-bottom: 20px;
-      -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      letter-spacing: 1px;
-      border-bottom: none;
-      background: transparent; }
-      #mainNav.navbar-shrink {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid rgba(79,195,247, 0.4);
-        background: #00838F;; }
-      #mainNav .nav-link.active {
-        outline: none;
-        background-color: rgba(79,195,247, 0.4); }
-        #mainNav .nav-link.active:hover {
-          color: whitesmoke; } }
+    transition: background 0.3s ease-in-out;
+}
 
-
-
-.masthead {
-  display: table;
-  width: 100%;
-  height: auto;
-  padding: 100px 0;
-  text-align: center;
-  color: whitesmoke;
-  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2) ), url("../img/intro-bg.jpg") no-repeat bottom center scroll;
-  background-color: #00838F;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-  .masthead .intro-body {
-    display: table-cell;
-    vertical-align: middle; }
-    .masthead .intro-body .brand-heading {
-      font-size: 50px; }
-    .masthead .intro-body .intro-text {
-      font-size: 34px; }
-  @media (min-width: 768px) {
-    .masthead {
-      height: 100%;
-      padding: 0; }
-      .masthead .intro-body .brand-heading {
-        font-size: 80px; }
-      .masthead .intro-body .intro-text {
-        font-size: 38px; } }
-
-.btn-circle {
-  font-size: 26px;
-  width: 55px;
-  height: 55px;
-  margin-top: 15px;
-  line-height: 45px;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-  color: whitesmoke;
-  border: 2px solid whitesmoke;
-  border-radius: 100% !important;
-  background: transparent; }
-  .btn-circle:focus, .btn-circle:hover {
-    color: whitesmoke;
+#mainNav .navbar-nav .nav-item:hover {
+    color: fade(whitesmoke, 80%);
     outline: none;
-    background: rgba(79,195,247, 0.1); }
+    background-color: transparent;
+}
 
-.content-section {
-  padding-top: 100px;
-  padding-bottom: 100px; }
-
-.download-section {
-  color: whitesmoke;
-  background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
-  background-color: #00838F;;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-
-#map {
-  width: 100%;
-  height: 300px; }
+#mainNav .navbar-nav .nav-item:active,
+#mainNav .navbar-nav .nav-item:focus {
+    outline: none;
+    background-color: transparent;
+}
 
 @media (min-width: 992px) {
-  .content-section {
+    #mainNav {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+        -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+        letter-spacing: 1px;
+        border-bottom: none;
+        background: transparent;
+    }
+    #mainNav.navbar-shrink {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid rgba(79, 195, 247, 0.4);
+        background: #00838F;
+        ;
+    }
+    #mainNav .nav-link.active {
+        outline: none;
+        background-color: rgba(79, 195, 247, 0.4);
+    }
+    #mainNav .nav-link.active:hover {
+        color: whitesmoke;
+    }
+}
+
+.masthead {
+    display: table;
+    width: 100%;
+    height: auto;
+    padding: 100px 0;
+    text-align: center;
+    color: whitesmoke;
+    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url("../img/intro-bg.jpg") no-repeat bottom center scroll;
+    background-color: #00838F;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.masthead .intro-body {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.masthead .intro-body .brand-heading {
+    font-size: 50px;
+}
+
+.masthead .intro-body .intro-text {
+    font-size: 34px;
+}
+
+@media (min-width: 768px) {
+    .masthead {
+        height: 100%;
+        padding: 0;
+    }
+    .masthead .intro-body .brand-heading {
+        font-size: 80px;
+    }
+    .masthead .intro-body .intro-text {
+        font-size: 38px;
+    }
+}
+
+.btn-circle {
+    font-size: 26px;
+    width: 55px;
+    height: 55px;
+    margin-top: 15px;
+    line-height: 45px;
+    -webkit-transition: background 0.3s ease-in-out;
+    -moz-transition: background 0.3s ease-in-out;
+    transition: background 0.3s ease-in-out;
+    color: whitesmoke;
+    border: 2px solid whitesmoke;
+    border-radius: 100% !important;
+    background: transparent;
+}
+
+.btn-circle:focus,
+.btn-circle:hover {
+    color: whitesmoke;
+    outline: none;
+    background: rgba(79, 195, 247, 0.1);
+}
+
+.content-section {
     padding-top: 100px;
-    padding-bottom: 100px; }
-  #map {
-    height: 350px; } }
+    padding-bottom: 100px;
+}
+
+.download-section {
+    color: whitesmoke;
+    background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
+    background-color: #00838F;
+    ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#map {
+    width: 100%;
+    height: 300px;
+}
+
+@media (min-width: 992px) {
+    .content-section {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    #map {
+        height: 350px;
+    }
+}
 
 .btn {
-  font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  text-transform: uppercase;
-  border-radius: 0; }
+    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    text-transform: uppercase;
+    border-radius: 0;
+}
 
 .btn-default {
-  color: #00838F;;
-  border: 1px solid #00838F;;
-  background-color: transparent; }
-  .btn-default:focus, .btn-default:hover {
-    color: #00838F;;
-    border: 1px solid #00838F;;
+    color: #00838F;
+    ;
+    border: 1px solid #00838F;
+    ;
+    background-color: transparent;
+}
+
+.btn-default:focus,
+.btn-default:hover {
+    color: #00838F;
+    ;
+    border: 1px solid #00838F;
+    ;
     outline: none;
-    background-color: #00838F;; }
+    background-color: #00838F;
+    ;
+}
 
 ul.banner-social-buttons {
-  margin-top: 0; }
-  @media (max-width: 1199px) {
+    margin-top: 0;
+}
+
+@media (max-width: 1199px) {
     ul.banner-social-buttons {
-      margin-top: 15px; } }
-  @media (max-width: 767px) {
+        margin-top: 15px;
+    }
+}
+
+@media (max-width: 767px) {
     ul.banner-social-buttons li {
-      display: block;
-      margin-bottom: 30px;
-      padding: 0; }
-      ul.banner-social-buttons li:last-child {
-        margin-bottom: 0; } }
+        display: block;
+        margin-bottom: 30px;
+        padding: 0;
+    }
+    ul.banner-social-buttons li:last-child {
+        margin-bottom: 0;
+    }
+}
 
 footer {
-  padding: 50px 0; }
-  footer p {
+    padding: 50px 0;
+}
+
+footer p {
     font-size: 18px;
-    margin: 0; }
+    margin: 0;
+}
 
 ::-moz-selection {
-  background: #fcfcfc;
-  background: rgba(255,171, 0.2);
-  text-shadow: none; }
+    background: #fcfcfc;
+    background: rgba(255, 171, 0.2);
+    text-shadow: none;
+}
 
 ::selection {
-  background: #fcfcfc;
-  background: rgba(255,171, 0.2);
-  text-shadow: none; }
+    background: #fcfcfc;
+    background: rgba(255, 171, 0.2);
+    text-shadow: none;
+}
 
 img::selection {
-  background: transparent; }
+    background: transparent;
+}
 
 img::-moz-selection {
-  background: transparent; }
+    background: transparent;
+}
 
 body {
-  -webkit-tap-highlight-color: rgba(255,171, 0.2); }
+    -webkit-tap-highlight-color: rgba(255, 171, 0.2);
+}
 
-.wedding-logo{
+.wedding-logo {
     width: 300px;
     height: 300px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
 }
-.iban{
-   height:100px;
-   text-align:left;
+
+.iban {
+    height: 100px;
+    text-align: left;
 }
 
-.iban table{
-   margin: auto;
-   margin-top: 50px;
+.iban table {
+    margin: auto;
+    margin-top: 50px;
 }
-@media (max-width: 767px){
-    .iban{
-        height:150px;
+
+@media (max-width: 767px) {
+    .iban {
+        height: 150px;
     }
 }
 
-.highlight{
-
-}
+.highlight {}
