--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -1,6 +1,6 @@
 <div ng-init="Home.init()" id="home-scroll-context">
     <!-- Intro Header -->
-    <header class="masthead">
+    <header class="masthead" set-height>
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -9,7 +9,7 @@
                         <p class="intro-text">
                             Sono lieti di invitarvi a celebrare il loro Matrimonio, che si terrà al Maklas nella bellissima spiaggia di Cala Sinzias
                         </p>
-                        <a href="#lista" class="btn btn-circle js-scroll-trigger">
+                        <a du-smooth-scroll du-scrollspy offset="30" href="#lista" class="btn btn-circle js-scroll-trigger">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
