google map integration

--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -71,6 +71,6 @@
             </div>
         </div>
         <!-- Map Section -->
-        <div id="map"></div>
+        <div id="map" google-map></div>
     </section>
 </div>
