static website with wedding logo

--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mx-auto">
-                    <img class="wedding-logo" src="img/wedding-logo.jpg">
+                    <img class="wedding-logo" src="img/wedding-logo.png">
                 </div>
             </div>
         </div>
