--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -54,7 +54,12 @@ h6 {
 
 .intro-text,
 .italic {
-    font-family: 'MonikaItalic', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.red-line{
+    border-bottom: 2px solid red;
+    width: 100%;
 }
 
 p {
@@ -130,6 +135,11 @@ a:hover {
     width: 500px;
 }
 
+.masthead .intro-body {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 @media (max-width: 992px) {
     .wedding-logo {
         width: 400px;
@@ -139,6 +149,9 @@ a:hover {
 @media (max-width: 768px) {
     .wedding-logo {
         width: 280px;
+    }
+    .masthead .intro-body{
+        vertical-align: top;
     }
 }
 
@@ -184,13 +197,8 @@ a:hover {
     background-size: cover;
 }
 
-.masthead .intro-body {
-    display: table-cell;
-    vertical-align: middle;
-}
-
 .masthead .intro-body .brand-heading {
-    font-size: 50px;
+    font-size: 38px;
 }
 
 .masthead .intro-body .intro-text {
@@ -206,7 +214,7 @@ a:hover {
         font-size: 80px;
     }
     .masthead .intro-body .intro-text {
-        font-size: 38px;
+        font-size: 50px;
     }
 }
 
@@ -250,7 +258,7 @@ a:hover {
 
 #map {
     width: 100%;
-    height: 300px;
+    height: 600px;
 }
 
 @media (min-width: 992px) {
@@ -352,7 +360,6 @@ body {
 }
 
 .iban table {
-    margin: auto;
     margin-top: 50px;
 }
 
