--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -7,7 +7,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="brand-heading">Simone & Stefania</h1>
                         <p class="intro-text">
-                            Sono lieti di invitarvi a celebrare il loro Matrimonio, che si terrà al Maklas nella bellissima spiaggia di Cala Sinzias
+                            Vi aspettano per festeggiare il loro Matrimonio!<br/>Il giorno 25 Maggio al Maklas, presso la spiaggia di Cala Sinzias
                         </p>
                         <a du-smooth-scroll du-scrollspy offset="30" href="#lista" class="btn btn-circle js-scroll-trigger">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -23,12 +23,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Lista Nozze</h2>
+                    <h2>Luna di miele</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 mx-auto">
-                    <p class="italic">
+                    <p class="italic" style="text-align:left">
                         Se volete contribuire alla nostra
                         <span class="highlight">luna di miele in Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
                     </p>
@@ -58,19 +58,19 @@
 
     <!-- Contact Section -->
     <section id="location" class="content-section text-center">
+        <div id="map" google-map></div>
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Location</h2>
+                    <h2>location</h2>
                     <p>
                         <a target="_blank" href="https://www.google.it/maps/place/Maklas/@39.2018075,9.5634451,15z/data=!4m5!3m4!1s0x0:0xa374f950792d396a!8m2!3d39.2018075!4d9.5634451">
-                            <span style="font-weight: 700;">Maklas</span><br/><span>loc. S.  Pietro - Castiadas (spiaggia di Cala Sinzias)</span>
+                            <span style="font-weight: 700;">Maklas</span> - <span>loc. S.  Pietro - Castiadas (spiaggia di Cala Sinzias)</span>
                         </a>
                     </p>
                 </div>
             </div>
         </div>
-        <!-- Map Section -->
-        <div id="map" google-map></div>
     </section>
 </div>
