--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -28,6 +28,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 mx-auto">
+                    <img class="wedding-logo" src="img/wedding-logo.png">
+                </div>
+                <div class="col-lg-4 mx-auto">
                     <p class="italic" style="text-align:left">
                         Se volete contribuire alla nostra
                         <span class="highlight">luna di miele in Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
@@ -49,9 +52,6 @@
                         </table>
                     </div>
                 </div>
-                <div class="col-lg-4 mx-auto">
-                    <img class="wedding-logo" src="img/wedding-logo.png">
-                </div>
             </div>
         </div>
     </section>
@@ -60,7 +60,7 @@
     <section id="location" class="content-section text-center">
         <div id="map" google-map></div>
 
-        <div class="container">
+        <div class="container" style="padding-top: 50px;">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>location</h2>
