--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -132,7 +132,8 @@ a:hover {
 }
 
 .wedding-logo {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
 }
 
 .masthead .intro-body {
@@ -141,15 +142,11 @@ a:hover {
 }
 
 @media (max-width: 992px) {
-    .wedding-logo {
-        width: 400px;
-    }
+
 }
 
 @media (max-width: 768px) {
-    .wedding-logo {
-        width: 280px;
-    }
+
     .masthead .intro-body{
         vertical-align: top;
     }
@@ -242,7 +239,6 @@ a:hover {
 
 .content-section {
     padding-top: 100px;
-    padding-bottom: 100px;
 }
 
 .download-section {
@@ -264,7 +260,6 @@ a:hover {
 @media (min-width: 992px) {
     .content-section {
         padding-top: 100px;
-        padding-bottom: 100px;
     }
     #map {
         height: 350px;
