adding social section

--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -73,4 +73,20 @@
             </div>
         </div>
     </section>
+
+    <!-- Contact Section -->
+    <section id="social" class="content-section text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2>Social</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <p>Posta qui la tua foto!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
