--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -4,8 +4,8 @@
 }
 
 @font-face {
-    font-family: "MonikaItalic";
-    src: url(Monika_Italic.ttf) format("truetype");
+    font-family: "EuphoriaScript";
+    src: url(EuphoriaScript-Regular.otf) format("truetype");
 }
 
 body {
@@ -39,11 +39,10 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Monika', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'EuphoriaScript', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
     margin: 0 0 35px;
     letter-spacing: 1px;
-    text-transform: uppercase;
 }
 
 h5,
@@ -195,7 +194,7 @@ a:hover {
 }
 
 .masthead .intro-body .brand-heading {
-    font-size: 38px;
+    font-size: 60px;
 }
 
 .masthead .intro-body .intro-text {
@@ -366,7 +365,15 @@ body {
 
 .highlight {}
 
-#social{
+#accommodations{
     background-color:whitesmoke;
     color: #00838F
+}
+
+#accommodations a{
+ color: #00838F
+}
+
+.hotel{
+    text-align:center;
 }
