--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Luna di miele</h2>
+                    <h1>Honeymoon</h1>
                 </div>
             </div>
             <div class="row">
@@ -63,7 +63,7 @@
         <div class="container" style="padding-top: 50px;">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>location</h2>
+                    <h1>Location</h1>
                     <p>
                         <a target="_blank" href="https://www.google.it/maps/place/Maklas/@39.2018075,9.5634451,15z/data=!4m5!3m4!1s0x0:0xa374f950792d396a!8m2!3d39.2018075!4d9.5634451">
                             <span style="font-weight: 700;">Maklas</span> - <span>loc. S.  Pietro - Castiadas (spiaggia di Cala Sinzias)</span>
@@ -74,8 +74,43 @@
         </div>
     </section>
 
+    <section id="accommodations" class="content-section text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h1>Accommodations</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <p>Di seguito trovate alcuni alberghi in zona a prezzi convenzionati:</p>
+                </div>
+            </div>
+            <div class="row hotel">
+                <div style="margin: auto; padding:20px;">
+                    <img width="300px" src="https://media-cdn.tripadvisor.com/media/photo-s/0c/98/0b/ce/hotel-regina-simius.jpg">
+                </div>
+                <div style="width:300px; margin: auto;">
+                    <h2>Hotel Regina Simius</h2>
+                    <p><a href="https://www.google.it/maps/place/Hotel+Regina+Simius/@39.1444398,9.5185202,17z/data=!3m1!4b1!4m5!3m4!1s0x12e0c25dcf2b2011:0x1fe4e495ce49a01a!8m2!3d39.1444398!4d9.5207089">
+                        Via Regina Elena, 34, 09049 Villasimius CA </a><br/><i><a href="http://hotelreginasimius.it">hotelreginasimius.it</a></i></p>
+                </div>
+            </div>
+            <div class="row hotel">
+                <div style="margin: auto; padding:20px;">
+                    <img width="300px" src="http://www.aroundfamily.it/images/strutture/sardegna/cagliari/corte-dei-rei-residence-castiadas/corte-dei-rei-residence-castiadas-vista-dallalto.jpg">
+                </div>
+                <div style="width:300px; margin: auto;">
+                    <h2>La Corte dei Rei</h2>
+                    <p><a href="https://www.google.it/maps/place/La+Corte+dei+Rei/@39.2617939,9.5226601,15z/data=!4m5!3m4!1s0x0:0x7918fc7b51b05abb!8m2!3d39.2617939!4d9.5226601?sa=X&ved=0ahUKEwjYiJXNi-fYAhUKyaQKHa-GBHoQ_BIIhwEwCg">
+                        Masone Pardu, 09040 Castiadas CA</a> <br/><i><a href="http://www.residencecastiadas.it/">www.residencecastiadas.it</a></i></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="social" class="content-section text-center">
+    <!--section id="social" class="content-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -88,5 +123,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section-->
 </div>
