complete email e email sending

--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -33,7 +33,7 @@
                 <div class="col-lg-4 mx-auto">
                     <p class="italic" style="text-align:left">
                         Se volete contribuire alla nostra
-                        <span class="highlight">luna di miele in Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
+                        <span class="highlight">luna di miele in Namibia e Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
                     </p>
                     <div class="iban">
                         <table>
