--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -83,7 +83,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <p>Di seguito trovate alcuni alberghi in zona:</p>
+                    <p>Di seguito trovate alcuni alberghi convenzionati in zona:</p>
                 </div>
             </div>
             <div class="row hotel">
