--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -388,3 +388,11 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+.photo{
+}
+
+.photo-container{
+    background-color: black;
+    margin-top: 67px;
+}
