--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -58,12 +58,18 @@
 
     <!-- Contact Section -->
     <section id="location" class="content-section text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h1>Location</h1>
+                </div>
+            </div>
+        </div>
         <div id="map" google-map></div>
 
         <div class="container" style="padding-top: 50px;">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h1>Location</h1>
                     <p>
                         <a target="_blank" href="https://www.google.it/maps/place/Maklas/@39.2018075,9.5634451,15z/data=!4m5!3m4!1s0x0:0xa374f950792d396a!8m2!3d39.2018075!4d9.5634451">
                             <span style="font-weight: 700;">Maklas</span> - <span>loc. S.  Pietro - Castiadas (spiaggia di Cala Sinzias)</span>
