--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -26,6 +26,9 @@
                     <h1>Honeymoon</h1>
                 </div>
             </div>
+        </div>
+        <div id="maphoneymoon" google-map-honey-moon></div>
+        <div class="container">
             <div class="row">
                 <div class="col-lg-4 mx-auto">
                     <img class="wedding-logo" src="img/wedding-logo.png">
