--- a/src/main/webapp/partials/photo/photo.html
+++ b/src/main/webapp/partials/photo/photo.html
@@ -1,13 +1,14 @@
 <div ng-init="Photo.init()" class="photo">
 
     <div infinite-scroll="Photo.loadNext()" infinite-scroll-distance="1" class="photo-container">
+        <div id="modal-parent" set-height></div>
         <hj-gridify hj-gridify-options="{
         collection: Photo.collection,
         perRow: Photo.getPerRow,
         averageRatio: 1.5,
         gutter: 1}" hj-gridify-item-as="tile">
 
-            <div class="item" back-img="{{tile.src}}"></div>
+            <div class="item" back-img="{{tile.src}}" ng-click="Photo.selectImg($index, tile)"></div>
 
         </hj-gridify>
     </div>
