--- a/src/main/webapp/partials/home/home.html
+++ b/src/main/webapp/partials/home/home.html
@@ -19,6 +19,7 @@
     </header>
 
     <!-- About Section -->
+    <!-- About Section -->
     <section id="lista" class="content-section text-center">
         <div class="container">
             <div class="row">
@@ -26,17 +27,15 @@
                     <h1>Honeymoon</h1>
                 </div>
             </div>
-        </div>
-        <div id="maphoneymoon" google-map-honey-moon></div>
-        <div class="container">
             <div class="row">
                 <div class="col-lg-4 mx-auto">
                     <img class="wedding-logo" src="img/wedding-logo.png">
+                    <a class="map-link" ui-sref="itinerary">Clicca <span class="highlight">QUI</span> per vedere il nostro itinerario</a>
                 </div>
                 <div class="col-lg-4 mx-auto">
                     <p class="italic" style="text-align:left">
                         Se volete contribuire alla nostra
-                        <span class="highlight">luna di miele in Namibia e Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
+                        luna di miele in <span class="highlight">Namibia</span> e <span class="highlight">Tanzania</span>, potete farlo facendo un bonifico bancario sul conto:
                     </p>
                     <div class="iban">
                         <table>
