--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -476,6 +476,10 @@ body {
     color: black;
 }
 
+.itinerary .link{
+    color: black;
+}
+
 .itinerary-container,
 .photo-container{
     background-color: black;
